<resources>
    <string name="app_name">NavigationDrawer</string>

    <string name="string_home">Home</string>
    <string name="string_one">Meats</string>
    <string name="string_two">Dairy</string>
    <string name="string_three">Vegetables</string>
    <string name="string_four">Fruits</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
