<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home_fragment"
            android:icon="@drawable/home_button"
            android:title="@string/string_home" />
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/meats_image"
            android:title="@string/string_one" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/dairy_image"
            android:title="@string/string_two" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/vegetables_image"
            android:title="@string/string_three" />
        <item
            android:id="@+id/nav_fourth_fragment"
            android:icon="@drawable/fruits_image"
            android:title="@string/string_four" />
    </group>
</menu>